--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alex",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
     "mariadb": "^3.3.2",
