--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.2",
+    "save": "^2.9.0",
     "sequelize": "^6.37.3",
     "serve-favicon": "^2.5.0"
   },
